--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Educación Continua</string>
-    <string name="server_client_id">923614362985-lhn7ofkba3kroikcq6repgb17qbuhj33.apps.googleusercontent.com</string>
+    <string name="server_client_id_debug">835770905354-89itpo5t6vfvtrmfltvmfj1765vlr1va.apps.googleusercontent.com</string>
+    <string name="server_client_id_produccion">523301986974-4rbb6gu192148lg5poe9ofi0fnivbi0f.apps.googleusercontent.com</string>
+    <string name="search">Buscar</string>
+    <string name="content_description_search">buscar...</string>
+    <string name="content_description_more">mas opciones</string>
+    <string name="more">Mas</string>
+    <string name="btnJornada">Boton Jornada</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
