--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">Educación Continua</string>
+    <string name="app_name">Geduco</string>
     <string name="server_client_id_debug">877594372056-aegs95db4kk73knee04esc80phfn3lbp.apps.googleusercontent.com</string>
     <string name="server_client_id_produccion">362769569855-et1d0fucmaneh2urgfggho49migpbss6.apps.googleusercontent.com</string>
     <string name="search">Buscar</string>
-    <string name="content_description_search">buscar...</string>
+    <string name="content_description_search">buscar…</string>
     <string name="content_description_more">mas opciones</string>
     <string name="more">Mas</string>
     <string name="btnJornada">Boton Jornada</string>
@@ -16,7 +16,7 @@
     <string name="icon_date">Fecha</string>
     <string name="titulo">CURSOS Y EVENTOS DE EDUCACIÓN CONTINUA UFPS</string>
     <string name="btn_google">Iniciar Sesión</string>
-    <string name="verificando">Verificando...</string>
+    <string name="verificando">Verificando…</string>
     <string name="tituloCursos">LISTA DE EVENTOS Y CURSOS DISPONIBLES</string>
     <string name="logo_app">Logo App</string>
     <string name="dise_o_top">diseño top</string>
